添加Modern主题支持，统一显示样式。

--- a/LabelPrinter/MainWindow.xaml
+++ b/LabelPrinter/MainWindow.xaml
@@ -4,7 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LabelPrinter"
-        xmlns:ReoGrid="clr-namespace:unvell.ReoGrid;assembly=unvell.ReoGrid" xmlns:Converter="clr-namespace:Framework.Converter" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:Custom="http://www.galasoft.ch/mvvmlight" x:Class="LabelPrinter.MainWindow"
+        xmlns:ReoGrid="clr-namespace:unvell.ReoGrid;assembly=unvell.ReoGrid" 
+    xmlns:Converter="clr-namespace:Framework.Converter" 
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
+    xmlns:Custom="http://www.galasoft.ch/mvvmlight" 
+    xmlns:ui="http://schemas.modernwpf.com/2019"
+        ui:WindowHelper.UseModernWindowStyle="True"
+    x:Class="LabelPrinter.MainWindow"
         mc:Ignorable="d"
         Title="标签打印" Height="450" Width="1000"
         Loaded="Window_Loaded" Closed="Window_Closed" Closing="Window_Closing">
